fix(Navbar)[OF]: Fixing display not showing bug

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ nav a {
     }
 
     .navbar-links-container {
+        display: none;
         padding: 0.5rem 0 0 0;
         flex-flow: column;
         align-items: stretch;
